--- a/mainApp/templates/weighingstate.html
+++ b/mainApp/templates/weighingstate.html
@@ -59,7 +59,13 @@
                                                 </small>
                                                 {% endif %}   
                                             </td>
-                                            <td>{{row.status|yesno:'Aktif, Tidak Aktif'}}</td>
+                                            <td>
+                                                {% if row.status %}
+                                                    <i class="fas fa-check text-blue"></i>
+                                                {% else %}
+                                                    <i class="fas fa-times text-red"></i>
+                                                {% endif %}
+                                            </td>
                                             <td>
                                                 {% if row.pendingstatus %}
                                                 <a class="btn btn-secondary" href="{% url 'editweighingstate' row.id %}"><i class="fas fa-edit"></i></a>
