--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -1,8 +1,4 @@
 {% load static %}
-awikwok
-{{header}}
-{{data}}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -28,19 +24,19 @@ awikwok
 
             <div class="row invoice-info">
                 <div class="col-sm-12 invoice-col">
-                    <table border="1" class="">
-                        <tr class="text-center align-middle h4">
+                    <table class="table table-bordered">
+                        <tr class="text-center align-middle h5">
                             <td rowspan="2"><img src="{% static 'others/logo.png' %}">
                             </td>
                             <td><b><i>FORM</i></b></td>
                             <td></td>
                         </tr>
-                        <tr class="text-center align-middle h4">
+                        <tr class="text-center align-middle h5">
                             <td><b><i>{{header.reporttitle.title}}
                                         <br><small>{{header.reporttitle.subtitle}}</small></i></b></td>
                             <td><i>{{header.department.name}}</i></td>
                         </tr>
-                        <tr class="text-center align-middle h4">
+                        <tr class="text-center align-middle h5">
                             <td><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"j/n/Y"}}</td>
                             <td><i>This document will be reviewed on:
                                     <br>{{header.reviewdate|date:"j/n/Y"}}</i></td>
@@ -50,119 +46,95 @@ awikwok
                             <td colspan="3">
                                 <table border="0" class="table table-borderless">
                                     <tr>
-                                        <td width="75px"></td>
-                                        <td width="150px">Nama Produk</td>
-                                        <td>: {{header.product.name}}</td>
-                                        <td width="75px"></td>
+                                        <td colspan="2">Nama Produk</td>
+                                        <td colspan="2">: {{header.product.name}}</td>
                                     </tr>
                                     <tr>
-                                        <td></td>
-                                        <td>No Batch</td>
-                                        <td>: {{header.batchno}}</td>
-                                        <td></td>
+                                        <td colspan="2">No Batch</td>
+                                        <td colspan="2">: {{header.batchno}}</td>
+                                    </tr>
+                                </table>
+                                <table class="table table-borderless">
+                                    <tr>
+                                        <td>
+                                            <table class="table table-striped table-bordered">
+                                                <tr class="text-center">
+                                                    <th>Tanggal Penimbangan</th>
+                                                    <th>No. Karton</th>
+                                                    <th>Hasil Penimbangan</th>
+                                                </tr>
+                                                {% if not data %}
+                                                <tr class="text-center">
+                                                    <td colspan="3"> ------------- No data-------------</td>
+                                                </tr>
+                                                {% endif %}
+                                
+                                                {%for row in data%}
+                                                <tr>
+                                                    <td>{{row.createdon|date:"d/m/Y h:i:s"}}</td>
+                                                    <td>{{row.boxno}}</td>
+                                                    <td>{{row.weight}}</td>
+                                                </tr>
+                                                {% if forloop.counter|divisibleby:rowlen and forloop.counter != data.count %}
+                                            </table>
+                                        </td>
+                                        <td>
+                                            <table class="table table-striped table-bordered">
+                                                <tr class="text-center">
+                                                    <th>Tanggal Penimbangan</th>
+                                                    <th>No. Karton</th>
+                                                    <th>Hasil Penimbangan</th>
+                                                </tr>
+                                                {% endif %}
+                                                {%endfor%}
+                                            </table>
+                                        </td>
                                     </tr>
                                 </table>
                             </td>
                         </tr>
                     </table>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col-12 table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>Qty</th>
-                                <th>Product</th>
-                                <th>Serial #</th>
-                                <th>Description</th>
-                                <th>Subtotal</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Call of Duty</td>
-                                <td>455-981-221</td>
-                                <td>El snort testosterone trophy driving gloves handsome</td>
-                                <td>$64.50</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>Need for Speed IV</td>
-                                <td>247-925-726</td>
-                                <td>Wes Anderson umami biodiesel</td>
-                                <td>$50.00</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>Monsters DVD</td>
-                                <td>735-845-642</td>
-                                <td>Terry Richardson helvetica tousled street art master</td>
-                                <td>$10.70</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td>Grown Ups Blue Ray</td>
-                                <td>422-568-642</td>
-                                <td>Tousled lomo letterpress</td>
-                                <td>$25.99</td>
-                            </tr>
-                        </tbody>
+                    <table class="table table-bordered">
+                        <tr class="text-center text-bold">
+                            <td>Dilakukan Oleh</td>
+                            <td>Diperiksa Oleh</td>
+                            <td>Diverifikasi Oleh</td>
+                            <td>Diverifikasi Oleh</td>
+                        </tr>
+                        <tr class="text-center text-bold">
+                            <td>Petugas Penimbangan</td>
+                            <td>Petugas Gudang</td>
+                            <td>Supervisor Produksi</td>
+                            <td>Supervisor Gudang</td>
+                        </tr>
+                        <tr height="100px">
+                            <td>Paraf:</td>
+                            <td>Paraf:</td>
+                            <td>Paraf:</td>
+                            <td>Paraf:</td>
+                        </tr>
+                        <tr>
+                            <td>Nama: {{signature.operator|default_if_none:"-"}}</td>
+                            <td>Nama: {{signature.petugasgudang|default_if_none:"-"}}</td>
+                            <td>Nama: {{signature.spvgudang|default_if_none:"-"}}</td>
+                            <td>Nama: {{signature.spvpabrik|default_if_none:"-"}}</td>
+                        </tr>
+                        <tr>
+                            <td>Tanggal:</td>
+                            <td>Tanggal:</td>
+                            <td>Tanggal:</td>
+                            <td>Tanggal:</td>
+                        </tr>
                     </table>
                 </div>
-
             </div>
-
-            <div class="row">
-
-                <div class="col-6">
-                    <p class="lead">Payment Methods:</p>
-                    <img src="../../dist/img/credit/visa.png" alt="Visa">
-                    <img src="../../dist/img/credit/mastercard.png" alt="Mastercard">
-                    <img src="../../dist/img/credit/american-express.png" alt="American Express">
-                    <img src="../../dist/img/credit/paypal2.png" alt="Paypal">
-                    <p class="text-muted well well-sm shadow-none" style="margin-top: 10px;">
-                        Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles, weebly ning heekya handango
-                        imeem plugg dopplr
-                        jibjab, movity jajah plickers sifteo edmodo ifttt zimbra.
-                    </p>
-                </div>
-
-                <div class="col-6">
-                    <p class="lead">Amount Due 2/22/2014</p>
-                    <div class="table-responsive">
-                        <table class="table">
-                            <tr>
-                                <th style="width:50%">Subtotal:</th>
-                                <td>$250.30</td>
-                            </tr>
-                            <tr>
-                                <th>Tax (9.3%)</th>
-                                <td>$10.34</td>
-                            </tr>
-                            <tr>
-                                <th>Shipping:</th>
-                                <td>$5.80</td>
-                            </tr>
-                            <tr>
-                                <th>Total:</th>
-                                <td>$265.24</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-
-            </div>
-
         </section>
 
     </div>
 
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script>window.print()</script>
 </body>
 
 </html>
