--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -127,6 +127,12 @@
                         <p>Users</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'featureacceess'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Feature Access List</p>
+                    </a>
+                </li>
             </ul>
         </li>
     </ul>
