--- a/mainApp/templates/base.html
+++ b/mainApp/templates/base.html
@@ -61,7 +61,7 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="{% static 'mainpage" class="brand-link">
+            <a href="{% url 'weighing' %}" class="brand-link">
                 <span class="brand-text font-weight-light"><img class="img-fluid img-thumbnail" src="{% static 'others/logo.png' %}"></span>
             </a>
 
