--- a/secureapp/templates/registration/featureaccesslist.html
+++ b/secureapp/templates/registration/featureaccesslist.html
@@ -15,14 +15,9 @@
                     role="tab" aria-controls="tab-1" aria-selected="true">List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if action == 'edit' or isvalid == 'no' %} active {% endif %}" id="button-tab-2" data-toggle="pill" href="#tab-2"
+                <a class="nav-link {% if action == 'edit' or isvalid == 'no' %} active {% endif %}" {% if action == 'view' %} hidden {% endif %} id="button-tab-2" data-toggle="pill" href="#tab-2"
                     role="tab" aria-controls="tab-2" aria-selected="false">{% if action == 'view' %} New {% else %} Edit {% endif %}</a>
             </li>
-            {% if action == 'edit' %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'userlist' %}#tab-2">New</a>
-            </li>
-            {% endif %}
         </ul>
     </div>
     <div class="card-body">
