--- a/mainApp/templates/end_batch.html
+++ b/mainApp/templates/end_batch.html
@@ -49,10 +49,12 @@
                                             <td>{{row.batchno}}</td>
                                             <td>{{row.status|yesno:'Pending, Close'}}</td>
                                             <td>
-                                                {% if row.status %}
-                                                    <i class="fas fa-check text-blue"></i>
+                                                {% if row.status == 1 %}
+                                                OK
+                                                {% elif row.status == 2 %}
+                                                Last Box
                                                 {% else %}
-                                                    <i class="fas fa-times text-red"></i>
+                                                <i class="fas fa-times text-red"></i>
                                                 {% endif %}
                                             </td>
                                             <!-- <td>
