--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -49,8 +49,10 @@
                             <td>{{row.boxno}}</td>
                             <td>{{row.iot_weight}}</td>
                             <td>
-                                {% if row.status %}
-                                <i class="fas fa-check text-blue"></i>
+                                {% if row.status == 1 %}
+                                OK
+                                {% elif row.status == 2 %}
+                                Last Box
                                 {% else %}
                                 <i class="fas fa-times text-red"></i>
                                 {% endif %}
