--- a/mainApp/templates/master_product.html
+++ b/mainApp/templates/master_product.html
@@ -23,6 +23,12 @@
                 <a class="nav-link" href="{% url 'viewproduct' %}#tab-2">New</a>
             </li>
             {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'uploadproduct' %}">Upload</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'downloadproduct' %}">Download</a>
+            </li>
         </ul>
     </div>
     <div class="card-body">
