--- a/mainApp/templates/master_product.html
+++ b/mainApp/templates/master_product.html
@@ -43,9 +43,9 @@
                                         <tr>
                                             <th>Name</th>
                                             <th>Code</th>
-                                            <th>Std. Weight</th>
-                                            <th>Min. Weight</th>
-                                            <th>Max. Weight</th>
+                                            <th>Std. Weight (gram)</th>
+                                            <th>Min. Weight (gram)</th>
+                                            <th>Max. Weight (gram)</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
