--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -36,7 +36,7 @@
                             <th>Product</th>
                             <th>Batch No</th>
                             <th>Box No</th>
-                            <th>Weight</th>
+                            <th>Weight (gram)</th>
                             <th>Status</th>
                             <th>Input Date</th>
                         </tr>
