--- a/mainApp/templates/upload_product.html
+++ b/mainApp/templates/upload_product.html
@@ -44,13 +44,13 @@
                     <tr>
                         <th>Code</th>
                         <th>Name</th>
-                        <th>Min. Weight</th>
-                        <th>Max. Weight</th>
-                        <th>Std. Weight</th>
+                        <th>Min. Weight (gram)</th>
+                        <th>Max. Weight (gram)</th>
+                        <th>Std. Weight (gram)</th>
                         <th>Cur. Name</th>
-                        <th>Cur. Min. Weight</th>
-                        <th>Cur. Max. Weight</th>
-                        <th>Cur. Std. Weight</th>
+                        <th>Cur. Min. Weight (gram)</th>
+                        <th>Cur. Max. Weight (gram)</th>
+                        <th>Cur. Std. Weight (gram)</th>
                         <th>Desc</th>
                     </tr>
                     </thead>
