--- a/mainApp/templates/weighing_simulator.html
+++ b/mainApp/templates/weighing_simulator.html
@@ -36,7 +36,7 @@
                                     <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>Weight</th>
+                                            <th>Weight (gram)</th>
                                             <th>Status</th>
                                             <th>Created On</th>
                                         </tr>
