--- a/mainApp/templates/report_batch_pdf_template.html
+++ b/mainApp/templates/report_batch_pdf_template.html
@@ -66,7 +66,7 @@
                                 <tr style="text-align: center;">
                                     <th>Tanggal Penimbangan</th>
                                     <th>No. Karton</th>
-                                    <th>Hasil Penimbangan</th>
+                                    <th>Hasil Penimbangan (gram)</th>
                                 </tr>
                                 {%for row in data%}
                                 <tr style="text-align: right;">
@@ -82,7 +82,7 @@
                                 <tr style="text-align: center;">
                                     <th>Tanggal Penimbangan</th>
                                     <th>No. Karton</th>
-                                    <th>Hasil Penimbangan</th>
+                                    <th>Hasil Penimbangan (gram)</th>
                                 </tr>
                                 {% endif %}
                                 {%endfor%}
