--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -193,6 +193,11 @@
                         } 
                         html += '\
                         <li class="item">\
+                            <div class="product-img" style="margin-right:7px">\
+                                <button class="btn btn-secondary btnweightAdjustment" data-id="'+ record.id + '" data-weight="' + weight +'">\
+                                    <i class="fa fa-edit"></i>\
+                                </button>\
+                            </div>\
                             <div class="product-info">\
                                 <a href="javascript:void(0)" class="product-title">'+ status +'\
                                     <span class="display-4 float-right">'+ weight+' g </span></a>\
