--- a/mainApp/templates/report_body.html
+++ b/mainApp/templates/report_body.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Manage Report</h1>
+<h1>Report PDF</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
