--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -255,16 +255,19 @@
 
     $("#batchhistorylist").on("click", ".deleteBox",function () {
         var registerid = $(this).data('id');
-        $.ajax({
-            type: "PUT",
-            dataType: "json",
-            url: url,
-            data: JSON.stringify({"registerid": registerid}),
-            success: function (data) {   // success callback function
-                alert(data.message)
-                updateBoxList()
-            }
-        })
+        var allow = confirm("Apakah anda yakin untuk menghapus data?")
+        if (allow){
+            $.ajax({
+                type: "PUT",
+                dataType: "json",
+                url: url,
+                data: JSON.stringify({ "registerid": registerid }),
+                success: function (data) {   // success callback function
+                    alert(data.message)
+                    updateBoxList()
+                }
+            })
+        }
     })
 
     $("#btnsubmitweightAdjustment").click(function () {
