--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -30,7 +30,7 @@
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
-                <table class="table dataTable">
+                <table class="table" id="reportTable">
                     <thead>
                         <tr>
                             <th>Product</th>
@@ -57,7 +57,7 @@
                                 <i class="fas fa-times text-red"></i>
                                 {% endif %}
                             </td>
-                            <td>{{row.input_date|date:"j/n/Y"}}</td>
+                            <td>{{row.input_date|date:"Y/n/j h:m:i"}}</td>
                         </tr>
                         {%endfor%}
                     </tbody>
@@ -96,5 +96,16 @@
             window.open(url + "?productid=" + productid + "&batchno=" + batchno + "&inputdatefrom=" + inputdatefrom + "&inputdateto=" + inputdateto)
         }
     })
+
+    $('#reportTable').DataTable({
+        "paging": true,
+        "lengthChange": true,
+        "searching": true,
+        "ordering": true,
+        "info": false,
+        "autoWidth": false,
+        "responsive": true,
+        "order": [[5, 'desc']],
+    });
 </script>
 {% endblock %}
