--- a/mainApp/templates/history.html
+++ b/mainApp/templates/history.html
@@ -87,7 +87,17 @@
                             <td>{{row.batchno}}</td>
                             <td>{{row.boxno}}</td>
                             <td>{{row.iot_weight}}</td>
-                            <td>{% if row.status != "" %}{{row.status|yesno:'OK, Reject'}}{% else %}Belum Ditimbang{% endif %}</td>
+                            <td>
+                                {% if row.status == 1 %}
+                                OK
+                                {% elif row.status == 2 %}
+                                Last Box
+                                {% elif row.status == 0 %}
+                                Reject
+                                {% else %}
+                                Belum Ditimbang
+                                {% endif %}
+                            </td>
                             <td>{{row.input_date|date:"Y/n/j h:m:i"}}</td>
                             <td>
                                 <button class="btn btn-danger deleteBox" data-id="{{row.id}}">
