clear qr after insert

--- a/mainApp/templates/base.html
+++ b/mainApp/templates/base.html
@@ -27,7 +27,7 @@
     {% endblock %}
 </head>
 
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition sidebar-mini sidebar-collapse">
     <!-- Site wrapper -->
     <div class="wrapper">
         <!-- Navbar -->
