--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -155,6 +155,7 @@
                 if ((batchno != null || batchno != "") && (code != null || code != "")) {
                     updateBoxList()
                 }
+                $("#qr").val("")
             }
         })
     }
