--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -156,6 +156,7 @@
                     updateBoxList()
                 }
                 $("#qr").val("")
+                $('#qr').focus()
             }
         })
     }
