--- a/mainApp/templates/weighingstate.html
+++ b/mainApp/templates/weighingstate.html
@@ -37,6 +37,7 @@
                                         <tr>
                                             <th>Product Name</th>
                                             <th>Batch No</th>
+                                            <th>Weight Adj.</th>
                                             <th>Open Status</th>
                                             <th>Status</th>
                                             <th>Action</th>
@@ -49,6 +50,7 @@
                                         <tr>
                                             <td>{{row.product.name}}</td>
                                             <td><a href="{% url 'viewbatchhistory' row.batchno %}">{{row.batchno}}</a></td>
+                                            <td>{{row.weightadjustment}}</td>
                                             <td>{{row.pendingstatus|yesno:'Open, Close'}}
                                                 {% if row.spvpabrik or row.spvgudang %}
                                                 <br>
@@ -111,7 +113,7 @@
                                     {% if action == 'view' %}
                                     <form action="{% url 'viewweighingstate' %}" method="POST" autocomplete="off">
                                         {% elif action == 'edit' %}
-                                        <!-- <form action="{% url 'editproduct' id %}" method="POST" autocomplete="off"> -->
+                                        <form action="{% url 'editweighingstate' id %}" method="POST" autocomplete="off">
                                             {% endif %}
                                             {% csrf_token %}
                                             {{ form | crispy }}
