--- a/mainApp/templates/weighingstateclose.html
+++ b/mainApp/templates/weighingstateclose.html
@@ -37,6 +37,7 @@
                                         <tr>
                                             <th>Product Name</th>
                                             <th>Batch No</th>
+                                            <th>Weight Adj.</th>
                                             <th>Open Status</th>
                                             <th>Status</th>
                                             <th>Action</th>
@@ -49,6 +50,7 @@
                                         <tr>
                                             <td>{{row.product.name}}</td>
                                             <td><a href="{% url 'viewbatchhistory' row.batchno %}">{{row.batchno}}</a></td>
+                                            <td>{{row.weightadjustment}}</td>
                                             <td>{{row.pendingstatus|yesno:'Open, Close'}}</td>
                                             <td>{{row.status|yesno:'Aktif, Tidak Aktif'}}</td>
                                             <td>
