--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -6,6 +6,28 @@
 {% include "sidebar.html" %}
 {% endblock %}
 {% block content %}
+<div class="modal fade" id="spvapprovalmodal" data-backdrop="static" tabindex="-1" role="dialog"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Approval</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <label for="username">Username:</label>
+                <input class="form-control" type="text" id="spvusername">
+                <label for="password">Password:</label>
+                <input class="form-control" type="password" id="spvpassword">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary float-left" id="btnapprove" data-dismiss="modal">Approve</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="rejectModal" data-backdrop="static" tabindex="-1" role="dialog"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -104,6 +126,7 @@
         <div class="card">
             <div class="card-header">
                 <h3 class="card-title">{% if state.status %}NO. BATCH: {{state.batchno}}, ADJUSTMENT: {{state.weightadjustment}}{% else %}Set Batch State terlebih dahulu!{% endif %} </h3>
+                <button id="btnapprovalmodal" class="btn btn-danger float-right">SPV Approval</button>
             </div>
             <div class="card-body" style="overflow-y: scroll; height:500px;">
                 <ul class="products-list product-list-in-card pl-2 pr-2" id="batchhistorylist">
@@ -318,6 +341,28 @@
             success: function (data) {   // success callback function
                 alert(data.message)
                 updateBoxList()
+            },
+            error: function (jqXhr, textStatus, errorMessage) { // error callback 
+                alert(jqXhr.responseJSON.message)
+            },
+        })
+    })
+
+    $("#btnapprovalmodal").click(function () {
+        $("#spvapprovalmodal").modal('show')
+    })
+
+    $("#btnapprove").click(function () {
+        var username = $("#spvusername").val();
+        var password = $("#spvpassword").val();
+        var url = "{% url 'spvapproval' %}"
+        $.ajax({
+            type: "POST",
+            dataType: "json",
+            url: url,
+            data: { "username": username, "password": password },
+            success: function (data) {   // success callback function
+                alert(data.message)
             },
             error: function (jqXhr, textStatus, errorMessage) { // error callback 
                 alert(jqXhr.responseJSON.message)
