--- a/mainApp/templates/master_product.html
+++ b/mainApp/templates/master_product.html
@@ -46,6 +46,7 @@
                                             <th>Std. Weight (gram)</th>
                                             <th>Min. Weight (gram)</th>
                                             <th>Max. Weight (gram)</th>
+                                            <th>Jumlah Koli</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -57,6 +58,7 @@
                                             <td>{{row.standardweight}}</td>
                                             <td>{{row.minweight}}</td>
                                             <td>{{row.maxweight}}</td>
+                                            <td>{{row.jumlahkoli}}</td>
                                             <td><a class="btn btn-secondary" href="{% url 'editproduct' row.id %}"><i
                                                         class="fas fa-edit"></i></a>
                                                 <a class="btn btn-danger" href="{% url 'deleteproduct' row.id %}"
